# coder-config

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  ROADMAP.md  TEST_COVERAGE.md  cli.js  config-loader.js  install.sh  package.json
.githooks/: post-commit  pre-commit
.github/workflows/: beta.yml  publish.yml  tauri-release.yml
docs/plans/: 2026-01-23-codex-cli-support-design.md  2026-01-23-folder-migration-design.md  cross-tool-plugin-interop.md
docs/specs/: workstream-design.md
hooks/: activity-track.sh  codex-workstream.sh  gemini-workstream.sh  ralph-loop-preprompt.sh  ralph-loop-stop.sh  session-end.sh  session-start.sh
lib/: apply.js  cli.js  config.js  constants.js  env.js  heartbeat.js  index.js  init.js  loops.js  mcps.js  memory.js  projects.js  registry.js  router.js  sessions.js  shell.js  workstreams.js
plugin/: README.md
plugin/.claude-plugin/: plugin.json
scripts/: capture-screenshots.js  postinstall.js  preuninstall.js  release.sh  sync-version.js  tauri-prepare.js
shared/: mcp-registry.json
shell/: coder-config.zsh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
test/: activity.test.js  apply.test.js  cli.test.js  config.test.js  constants.test.js  env.test.js  heartbeat.test.js  init.test.js  loops.test.js  mcps.test.js  memory.test.js  projects.test.js  registry.test.js  router.test.js  sessions.test.js  shell.test.js  utils.test.js  workstreams.test.js
ui/: index.html  package.json  server.cjs  terminal-server.cjs
ui/public/: sw.js  (+1 more)
(+131 files in other folders)
