[package]
name = "claude-config"
version = "0.39.0"
description = "Configuration management UI for Claude Code"
authors = ["regression.io"]
edition = "2021"
license = "MIT"
repository = "https://github.com/regression-io/claude-config"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
